[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Resources/concrete.png" type="Texture" id=2]
[ext_resource path="res://Actors/MapFlags/PlayerSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/PlayerCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/BotConstructor.tscn" type="PackedScene" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerCamera" parent="." instance=ExtResource( 4 )]

[node name="PlayerSpawn" parent="." instance=ExtResource( 3 )]

[node name="BotConstructor" parent="." instance=ExtResource( 5 )]

[node name="Ground" type="Node2D" parent="."]
z_index = -100
__meta__ = {
"_edit_lock_": true
}

[node name="BaseTexture" type="TextureRect" parent="Ground"]
margin_left = -1000.0
margin_top = -1000.0
margin_right = 1000.0
margin_bottom = 1000.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="."]
